fix style: broken style on login and create account pages

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,8 +10,7 @@
 $theme: mat.define-theme(
   (
     //
-    color:
-      (
+    color: (
         //
         theme-type: light,
         primary: mat.$green-palette
@@ -234,14 +233,22 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+  font-variation-settings:
+    "FILL" 0,
+    "wght" 400,
+    "GRAD" 0,
+    "opsz" 24;
 }
 
 .material-symbols-rounded {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+  font-variation-settings:
+    "FILL" 0,
+    "wght" 400,
+    "GRAD" 0,
+    "opsz" 24;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
@@ -291,12 +298,20 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .mat-mdc-snack-bar-action {
-  font-family: "Nunito", system-ui, -apple-system, Roboto !important;
+  font-family:
+    "Nunito",
+    system-ui,
+    -apple-system,
+    Roboto !important;
   color: var(--snack-bar-message-font-color) !important;
 }
 
 .mdc-tooltip__surface {
-  font-family: "Nunito", system-ui, -apple-system, Roboto !important;
+  font-family:
+    "Nunito",
+    system-ui,
+    -apple-system,
+    Roboto !important;
   padding: 0.5rem !important;
   font-size: 0.9rem !important;
 }
@@ -478,8 +493,10 @@ h2 {
     border-radius: 3rem;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 7px 30px rgba(0, 0, 0, 0.08),
-      0px 22px 30px 2px rgba(0, 0, 0, 0.15), 0px 8px 10px rgba(0, 0, 0, 0.15);
+    box-shadow:
+      0px 7px 30px rgba(0, 0, 0, 0.08),
+      0px 22px 30px 2px rgba(0, 0, 0, 0.15),
+      0px 8px 10px rgba(0, 0, 0, 0.15);
     padding: 0.8rem;
 
     .top {
@@ -804,7 +821,10 @@ h2 {
     rgba(59, 130, 246, 0.05) 100%
   );
   border: 1px solid rgba(0, 0, 0, 0.05);
-  box-shadow: 0 0 #0000, 0 0 #0000, 0 10px 15px -3px rgb(0 0 0 / 0.1),
+  box-shadow:
+    0 0 #0000,
+    0 0 #0000,
+    0 10px 15px -3px rgb(0 0 0 / 0.1),
     0 4px 6px -4px rgb(0 0 0 / 0.1);
   border-radius: 1rem;
 }
@@ -826,4 +846,8 @@ h2 {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.hidden {
+  display: none !important;
 }
